old/overlays/prod/infra/apps/harbor/ingress-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: harbor-gateway
  namespace: infra
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: harbor-http-port
      protocol: HTTP
    hosts:
      - harbor.simplefxn.com
  - port:
      number: 443
      name: harbor-https-port
      protocol: HTTPS
    tls:
      mode: PASSTHROUGH
    hosts:
      - harbor.simplefxn.com
      - notary.simplefxn.com
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: harbor-http-virtual-service
  namespace: infra
spec:
  hosts:
  - "harbor.simplefxn.com"
  gateways:
  - harbor-gateway
  http:
  - route:
    - destination:
        host: harbor.infra.svc.cluster.local
        port:
          number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: harbor-https-virtual-service
  namespace: infra
spec:
  hosts:
  - harbor.simplefxn.com
  gateways:
  - harbor-gateway
  tls:
  - match:
    - port: 443
      sniHosts:
      - harbor.simplefxn.com
    route:
    - destination:
        host: harbor.infra.svc.cluster.local
        port:
          number: 443
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: harbor-notary-virtual-service
  namespace: infra
spec:
  hosts:
  - notary.simplefxn.com
  gateways:
  - harbor-gateway
  tls:
  - match:
    - port: 443
      sniHosts:
      - notary.simplefxn.com
    route:
    - destination:
        host: harbor.infra.svc.cluster.local
        port:
          number: 4443
